--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
       "start": "node app",
       "dev": "nodemon app",
-      "test": "jest"
+      "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
