--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js:
  - 'stable' 
-install: npm install
-script: npm test
+
+services:
+  - docker
+
+script:
+  - docker-compose run app sh -c "npm test"
