--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
       "start": "node app",
-      "dev": "nodemon app",
+      "dev": "HOST=0.0.0.0 node app",
       "test": "jest --passWithNoTests"
   },
   "repository": {
