Fix install dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,6 @@ services:
       - /home/user/src/node_modules
     command: >
       sh -c "npm run dev"
-    env_file:
-      - .env
+    environment:
+      - HOST:${HOST}
+      - PORT:${PORT}
