Different node image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,5 @@ services:
     command: >
       sh -c "npm run dev"
     environment:
-      - HOST:${HOST}
-      - PORT:${PORT}
+      - HOST=${HOST}
+      - PORT=${PORT}
