--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,12 @@ node_js:
 services:
   - docker
 
+env:
+  - PORT=8000
+  - HOST=0.0.0.0
+  - DB_NAME=dummy_db
+  - DB_PASS=dummy_pass
+  - DB_USER=dummy_user
+
 script:
   - docker-compose run app sh -c "npm test"
