--- a/src/package.json
+++ b/src/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
       "start": "node app",
-      "dev": "HOST=0.0.0.0 node app",
-      "env": "rm -r node_modules",
+      "dev": "node app",
       "test": "jest --passWithNoTests"
   },
   "repository": {
