--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,5 @@ node_js:
 services:
   - docker
 
-env:
-  - PORT=8000
-  - HOST="0.0.0.0"
-  - DB_NAME=dummy_db
-  - DB_PASS=dummy_pass
-  - DB_USER=dummy_user
-  - DB_PORT=27017
-
 script:
-  - docker-compose run app sh -c "npm test"
+  - ./test.sh
