Modify script to test locally

--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "dev": "node app",
+    "localTest": "jest --passWithNoTests --watchAll --no-cache",
     "test": "jest --passWithNoTests --no-cache"
   },
   "repository": {
