--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
+    "dev": "nodemon app",
     "localTest": "jest --passWithNoTests --watchAll --no-cache",
     "test": "jest --passWithNoTests --no-cache"
   },
@@ -27,18 +28,21 @@
   "devDependencies": {
     "jest": "^27.2.4",
     "mongodb-memory-server-core": "^7.4.3",
+    "nodemon": "^2.0.13",
     "supertest": "^6.1.6"
   },
-  "jest":{
-      "verbose": true,
-      "name": "bookish",
-      "testEnvironment": "node",
-      "setupFilesAfterEnv": [ "./tests/setup.js"]
+  "jest": {
+    "verbose": true,
+    "name": "bookish",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./tests/setup.js"
+    ]
   },
-  "config":{
-    "mongodbMemoryServer":{
-        "systemBinary": "/usr/bin/mongod",
-        "version": "3.4.4"
+  "config": {
+    "mongodbMemoryServer": {
+      "systemBinary": "/usr/bin/mongod",
+      "version": "3.4.4"
     }
   }
 }
