--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ services:
   - docker
 
 script:
-  - docker-compose -f docker-compose.dev.yml run app sh -c "npm test"
+  - docker-compose -f docker-compose.dev.yml run app sh -c "npm test && npm run lint"
 
