--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -46,3 +46,14 @@ services:
       - ${DB_DATA}:/data/db
     # Specify config file
     command: ["-f", "/etc/mongo/mongod.conf"]
+
+  # Api doc
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    container_name: swagger_ui_container
+    ports:
+      - "80:8080"
+    volumes:
+      - ./design:/usr/share/nginx/html/doc
+    environment:
+      API_URL: doc/openapi_doc.yaml
