--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/albamr09/bookish-node#readme",
   "dependencies": {
+    "enum": "^3.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8"
