--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,7 @@ services:
     environment:
       - HOST=${HOST}
       - PORT=${PORT}
+      - TOKEN_SECRET=${TOKEN_SECRET}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_NAME=${DB_NAME}
