--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -6,13 +6,14 @@ on:
 
 jobs:
 
-  build:
-
+  app-dev:
+    name: Build and test the app
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
+      - name: Build docker images and test the app
         env: 
           PORT=8000
           HOST=127.0.0.1
@@ -35,8 +36,6 @@ jobs:
           REDOC_DIR="./.redoc"
           REDOC_SRC="${REDOC_DIR}/src"
           REDOC_CONF="${REDOC_DIR}/.config/nginx.conf"
-
-      - name: Build docker images and test the app
         run: |
           docker-compose -f docker-compose.dev.yml build --no-cache
           docker-compose -f docker-compose.dev.yml down
