--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -15,27 +15,27 @@ jobs:
         uses: actions/checkout@v2
       - name: Build docker images and test the app
         env: 
-          PORT=8000
-          HOST=127.0.0.1
-          APP_DIR="./src"
-          DB_ROOT_USER=devroot
-          DB_ROOT_PASSWORD=devroot
-          DB_USER=user
-          DB_PASSWORD=user
-          DB_NAME=bookishDB
-          DB_PORT=27017
-          DB_HOST=127.0.0.1
-          DB_CONFIG="./.docker"
-          DB_INIT="${DB_CONFIG}/init-mongo.sh"
-          DB_DATA="${DB_CONFIG}/mongo-volume"
-          DB_URI="mongodb://${DB_USER}:${DB_PASSWORD}@db:${DB_PORT}/${DB_NAME}"
-          SWAGGER_PORT=80
-          SWAGGER_DIR="./.swagger/"
-          SWAGGER_API_URL="doc/openapi_doc.yaml"
-          REDOC_PORT=8082
-          REDOC_DIR="./.redoc"
-          REDOC_SRC="${REDOC_DIR}/src"
-          REDOC_CONF="${REDOC_DIR}/.config/nginx.conf"
+          PORT:8000
+          HOST:127.0.0.1
+          APP_DIR:"./src"
+          DB_ROOT_USER:devroot
+          DB_ROOT_PASSWORD:devroot
+          DB_USER:user
+          DB_PASSWORD:user
+          DB_NAME:bookishDB
+          DB_PORT:27017
+          DB_HOST:127.0.0.1
+          DB_CONFIG:"./.docker"
+          DB_INIT:"${DB_CONFIG}/init-mongo.sh"
+          DB_DATA:"${DB_CONFIG}/mongo-volume"
+          DB_URI:"mongodb://${DB_USER}:${DB_PASSWORD}@db:${DB_PORT}/${DB_NAME}"
+          SWAGGER_PORT:80
+          SWAGGER_DIR:"./.swagger/"
+          SWAGGER_API_URL:"doc/openapi_doc.yaml"
+          REDOC_PORT:8082
+          REDOC_DIR:"./.redoc"
+          REDOC_SRC:"${REDOC_DIR}/src"
+          REDOC_CONF:"${REDOC_DIR}/.config/nginx.conf"
         run: |
           docker-compose -f docker-compose.dev.yml build --no-cache
           docker-compose -f docker-compose.dev.yml down
