--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -26,17 +26,18 @@ jobs:
           DB_PORT: 27017
           DB_HOST: 127.0.0.1
           DB_CONFIG: "./config/.docker"
-          DB_INIT: "${DB_CONFIG}/docker-entrypoint-initdb.d/"
-          DB_DATA: "${DB_CONFIG}/mongo-volume"
-          DB_URI: "mongodb://${DB_USER}:${DB_PASSWORD}@db:${DB_PORT}/${DB_NAME}"
+          DB_INIT: "./config/.docker/docker-entrypoint-initdb.d/"
+          DB_DATA: "./config/.docker/mongo-volume"
+          DB_URI: "mongodb://usertest:passtest@db:8000/bookishDBtest"
           SWAGGER_PORT: 80
           SWAGGER_DIR: "./config/.swagger/"
           SWAGGER_API_URL: "doc/openapi_doc.yaml"
           REDOC_PORT: 8082
           REDOC_DIR: "./config/.redoc"
-          REDOC_SRC: "${REDOC_DIR}/src"
-          REDOC_CONF: "${REDOC_DIR}/config/nginx.conf"
+          REDOC_SRC: "./config/.redoc/src"
+          REDOC_CONF: "./config/.redoc/config/nginx.conf"
         run: |
+          echo 
           docker-compose -f docker-compose.dev.yml build --no-cache
           docker-compose -f docker-compose.dev.yml down
           docker-compose -f docker-compose.dev.yml run app sh -c "npm test"
