[actions] Update config

--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -39,6 +39,6 @@ jobs:
         run: |
           echo 
           docker-compose -f docker-compose.dev.yml build --no-cache
-          docker-compose -f docker-compose.dev.yml down
+          docker-compose -f docker-compose.dev.yml up
           docker-compose -f docker-compose.dev.yml run app sh -c "npm test"
 
