--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
   build-test:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: ubuntu:latest
+    machine:
+      - image: ubuntu-2004:202107-02
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     environment:
