--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -46,5 +46,5 @@ jobs:
           #- name: Check logs of database
           #  run: docker logs mongodb
       - name: Run test
-        run: docker-compose -f ../docker-compose.dev.yml run app sh -c "npm run test"
+        run: docker-compose -f docker-compose.dev.yml run app sh -c "npm run test"
 
