--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -37,14 +37,18 @@ jobs:
         uses: actions/checkout@v2
       - name: Build docker images 
         run: docker-compose -f docker-compose.dev.yml build --no-cache
-      - name: Start containers 
-        run: docker-compose -f docker-compose.dev.yml up
+      - name: Start database
+        run: docker-compose -f docker-compose.dev.yml --env-file config/.env/.env.dev up -d db
       - name: Check running containers
         run: docker ps -a
-      - name: Check logs of app
-        run: docker logs bookish_node_dev
       - name: Check logs of database
         run: docker logs mongodb
+          #- name: Start containers 
+          #  run: docker-compose -f docker-compose.dev.yml up -d
+          #- name: Check running containers
+          #  run: docker ps -a
+          #- name: Check logs of app
+          #  run: docker logs bookish_node_dev
       - name: Run test
         run: docker exec bookish_node_dev sh -c "npm run test"
 
