[git actions] No env file

--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build docker images 
         run: docker-compose -f docker-compose.dev.yml build --no-cache
       - name: Start database
-        run: docker-compose -f docker-compose.dev.yml --env-file config/.env/.env.dev up -d db
+        run: docker-compose -f docker-compose.dev.yml up -d db
       - name: Check running containers
         run: docker ps -a
       - name: Check logs of database
