[git actions] Fix config file

--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Check logs of database
         run: docker logs mongodb
       - name: Start containers 
-        run: docker-compose -f docker-compose.dev.yml up app -d
+        run: docker-compose -f docker-compose.dev.yml up -d app
       - name: Check running containers
         run: docker ps -a
       - name: Check logs of app
