--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -10,27 +10,27 @@ jobs:
     name: Build and test the app
     runs-on: ubuntu-latest
     env: 
-      PORT: 8000
-      HOST: 127.0.0.1
+      PORT: ${{ secrets.PORT }}
+      HOST: ${{ secrets.HOST }}
       TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
-      DB_ROOT_USER: devroot
-      DB_ROOT_PASSWORD: devroot
-      DB_USER: usertest
-      DB_PASSWORD: passtest
-      DB_NAME: bookishDBtest
-      DB_PORT: 27017
-      DB_HOST: 127.0.0.1
-      DB_CONFIG: "./config/.docker"
-      DB_INIT: "./config/.docker/docker-entrypoint-initdb.d/"
-      DB_DATA: "./config/.docker/mongo-volume"
-      DB_URI: "mongodb://usertest:passtest@db:27017/bookishDBtest"
-      SWAGGER_PORT: 80
-      SWAGGER_DIR: "./config/.swagger/"
-      SWAGGER_API_URL: "doc/openapi_doc.yaml"
-      REDOC_PORT: 8082
-      REDOC_DIR: "./config/.redoc"
-      REDOC_SRC: "./config/.redoc/src"
-      REDOC_CONF: "./config/.redoc/config/nginx.conf"
+      DB_ROOT_USER: ${{ secrets.DB_ROOT_USER }}
+      DB_ROOT_PASSWORD: ${{ secrets.DB_ROOT_PASSWORD }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_CONFIG: ${{ secrets.DB_CONFIG}}
+      DB_INIT: ${{ secrets.DB_INIT }}
+      DB_DATA: ${{ secrets.DB_CONFIG }}
+      DB_URI: ${{ secrets.DB_URI }}
+      SWAGGER_PORT: ${{ secrets.SWAGGER_PORT }}
+      SWAGGER_DIR: ${{ secrets.SWAGGER_DIR }}
+      SWAGGER_API_URL: ${{ secrets.SWAGGER_API_URL }}
+      REDOC_PORT: ${{ secrets.REDOC_PORT }}
+      REDOC_DIR: ${{ secrets.REDOC_DIR }}
+      REDOC_SRC: ${{ secrets.REDOC_SRC }}
+      REDOC_CONF: ${{ secrets.REDOC_CONF }}
 
     steps:
       - name: Checkout
