--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
 version: "3"
 
+# Secrets for production version (look into using external)
+secrets:
+  MONGO_ROOT_PASSWORD:
+    file: .secrets/mongo-root-passwd
+  MONGO_USER_PASSWORD:
+    file: .secrets/mongo-user-passwd
+
 services:
   # Development service
   app:
-    container_name: 'bookish_node_dev'
+    container_name: 'bookish_node'
     build:
       context: ./src/
     ports:
@@ -12,7 +19,8 @@ services:
       - ./src/:/home/user/src/
       - /home/user/src/node_modules
     command: >
-      sh -c "npm run dev"
+      sh -c "npm start"
+    #TODO: use external secrets
     environment:
       - HOST=${HOST}
       - PORT=${PORT}
@@ -25,33 +33,37 @@ services:
     depends_on:
       - db
 
+  # Production based database
   db:
-    container_name: "mongodb"
-    image: mongo:latest
-    hostname: mongodb
+    image: mongo
     restart: always
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${DB_ROOT_USER}
-      - MONGO_INITDB_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+      - MONGO_INITDB_ROOT_PASSWORD_FILE=/var/run/secrets/MONGO_ROOT_PASSWORD
       - MONGO_INITDB_USERNAME=${DB_USER}
-      - MONGO_INITDB_PASSWORD=${DB_PASSWORD}
+      - MONGO_INITDB_PASSWORD_FILE=/var/run/secrets/MONGO_USER_PASSWORD
       - MONGO_INITDB_DATABASE=${DB_NAME}
     ports:
       - '${DB_PORT}:27017'
+
     volumes:
-      # Map mongo config file to /etc/mongo
-      - ${DB_CONFIG}:/etc/mongo/
-      # Copy the database initialization script
-      - ${DB_INIT}:/docker-entrypoint-initdb.d/
       # Make data persist on local folder named ./mongo-volume
       - ${DB_DATA}:/data/db
+      # Copy the database initialization script
+      - ./.docker/init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.sh 
+        # Map mongo config file to /etc/mongo
+      - ${DB_CONFIG}:/etc/mongo/
     # Specify config file
     command: ["-f", "/etc/mongo/mongod.conf"]
+    # Credentials stored as secrets
+    secrets:
+      - MONGO_ROOT_PASSWORD
+      - MONGO_USER_PASSWORD
 
   # Api doc
   swagger-ui:
     image: swaggerapi/swagger-ui
-    container_name: 'api_swagger'
+    container_name: swagger_ui
     ports:
       - "${SWAGGER_PORT}:8080"
     volumes:
