--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -37,13 +37,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Create docker secrets
         run: |
-          echo ${{ secrets.DB_ROOT_USER }} > ${{ SECRETS_DIR }}"/db_root_user"
-          echo ${{ secrets.DB_ROOT_PASSWORD }} > ${{ SECRETS_DIR }}"/db_root_passwd"
-          echo ${{ secrets.DB_USER }} > ${{ SECRETS_DIR }}"/db_user"
-          echo ${{ secrets.DB_PASSWORD }} > ${{ SECRETS_DIR }}"/db_passwd"
-          echo ${{ secrets.TOKEN_SECRET }} > ${{ SECRETS_DIR }}"/token_secret"
-          echo ${{ secrets.DB_URI }} > ${{ SECRETS_DIR }}"/db_uri"
-          echo ${{ secrets.DB_NAME }} > ${{ SECRETS_DIR }}"/db_name"
+          echo ${{ secrets.DB_ROOT_USER }} > ${{ secrets.SECRETS_DIR }}"/db_root_user"
+          echo ${{ secrets.DB_ROOT_PASSWORD }} > ${{ secrets.SECRETS_DIR }}"/db_root_passwd"
+          echo ${{ secrets.DB_USER }} > ${{ secrets.SECRETS_DIR }}"/db_user"
+          echo ${{ secrets.DB_PASSWORD }} > ${{ secrets.SECRETS_DIR }}"/db_passwd"
+          echo ${{ secrets.TOKEN_SECRET }} > ${{ secrets.SECRETS_DIR }}"/token_secret"
+          echo ${{ secrets.DB_URI }} > ${{ secrets.SECRETS_DIR }}"/db_uri"
+          echo ${{ secrets.DB_NAME }} > ${{ secrets.SECRETS_DIR }}"/db_name"
       - name: Build docker images 
         run: docker-compose -f docker-compose.yml build --no-cache
       - name: Start containers 
