--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Create docker secrets
         run: |
-          echo ${{ secrets.DB_ROOT_USER }} > ${{ secrets.SECRETS_DIR }}"/db_root_user"
+          touch ${{ secrets.SECRETS_DIR }}"/db_root_user" && echo ${{ secrets.DB_ROOT_USER }} > ${{ secrets.SECRETS_DIR }}"/db_root_user"
           echo ${{ secrets.DB_ROOT_PASSWORD }} > ${{ secrets.SECRETS_DIR }}"/db_root_passwd"
           echo ${{ secrets.DB_USER }} > ${{ secrets.SECRETS_DIR }}"/db_user"
           echo ${{ secrets.DB_PASSWORD }} > ${{ secrets.SECRETS_DIR }}"/db_passwd"
