--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -35,9 +35,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Current dir
+        run: |
+          pwd
+          ls -lha
       - name: Create docker secrets
         run: |
-          touch ${{ secrets.SECRETS_DIR }}"/db_root_user" && echo ${{ secrets.DB_ROOT_USER }} > ${{ secrets.SECRETS_DIR }}"/db_root_user"
+          echo ${{ secrets.DB_ROOT_USER }} > ${{ secrets.SECRETS_DIR }}"/db_root_user"
           echo ${{ secrets.DB_ROOT_PASSWORD }} > ${{ secrets.SECRETS_DIR }}"/db_root_passwd"
           echo ${{ secrets.DB_USER }} > ${{ secrets.SECRETS_DIR }}"/db_user"
           echo ${{ secrets.DB_PASSWORD }} > ${{ secrets.SECRETS_DIR }}"/db_passwd"
