--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -54,5 +54,5 @@ jobs:
       - name: Check logs of database
         run: docker logs mongodb
       - name: Run test
-        run: docker exec bookish_node_dev sh -c "npm test && npm run lint"
+        run: docker exec bookish_node sh -c "npm test && npm run lint"
 
