[workflow] Change test

--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -31,6 +31,7 @@ jobs:
       REDOC_DIR: ${{ secrets.REDOC_DIR }}
       REDOC_SRC: ${{ secrets.REDOC_SRC }}
       REDOC_CONF: ${{ secrets.REDOC_CONF }}
+      SECRETS_DIR: ${{ secrets.SECRETS_DIR }}
 
     steps:
       - name: Checkout
