--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,8 +55,8 @@ services:
       # Make data persist on local folder named ./mongo-volume
       - ${DB_DATA}:/data/db
       # Copy the database initialization script
-      - ./.docker/init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.sh 
-        # Map mongo config file to /etc/mongo
+      - ${DB_INIT}:/docker-entrypoint-initdb.d/
+      # Map mongo config file to /etc/mongo
       - ${DB_CONFIG}:/etc/mongo/
     # Specify config file
     command: ["-f", "/etc/mongo/mongod.conf"]
