--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "TOKEN_SECRET=$(cat $TOKEN_SECRET_FILE) DB_URI=$(cat $DB_URI_FILE) NODE_ENV=production node server",
-    "dev": "NODE_ENV=dev Enodemon server",
+    "dev": "NODE_ENV=dev nodemon server",
     "lint": "./node_modules/.bin/eslint .",
     "localTest": "TOKEN_SECRET=$(cat $TOKEN_SECRET_FILE) DB_URI=$(cat $DB_URI_FILE) jest --watchAll --no-cache --detectOpenHandles",
     "test": "TOKEN_SECRET=$(cat $TOKEN_SECRET_FILE) DB_URI=$(cat $DB_URI_FILE) jest --no-cache --detectOpenHandles"
